.provarCaches/00D5f000005vwGkEAI/objects/rstk__fsoacksched__c.object
<CustomObject>
    <description>fsoacksched__c</description>
    <fields>
        <fullName>rstk__ackdetail__c</fullName>
        <inlineHelpText>Detail</inlineHelpText>
        <label>SO Acknowledgement Detail</label>
        <referenceTo>rstk__fsoackd__c</referenceTo>
        <relationshipLabel>SO Acknowledgement Delivery Schedules</relationshipLabel>
        <relationshipName>deliveryschedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__address1__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To Address Line 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__address2__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To Address Line 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__address3__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To Address Line 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__city__c</fullName>
        <inlineHelpText>City</inlineHelpText>
        <label>Ship To City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__country__c</fullName>
        <inlineHelpText>Country</inlineHelpText>
        <label>Ship To Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__email__c</fullName>
        <inlineHelpText>Email</inlineHelpText>
        <label>Ship To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__fax__c</fullName>
        <inlineHelpText>Fax</inlineHelpText>
        <label>Ship To Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__name__c</fullName>
        <inlineHelpText>Name</inlineHelpText>
        <label>Ship To Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__phone__c</fullName>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Ship To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__qty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sequence__c</fullName>
        <inlineHelpText>Delivery Sequence</inlineHelpText>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__shipdate__c</fullName>
        <inlineHelpText>Actual Date Shipped</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__shiptoaddr__c</fullName>
        <inlineHelpText>Ship-To Address</inlineHelpText>
        <label>Ship To Address Seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__state__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__taxrate__c</fullName>
        <inlineHelpText>Tax Rate</inlineHelpText>
        <label>Sales Tax Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__zip__c</fullName>
        <inlineHelpText>Zip Code</inlineHelpText>
        <label>Ship To Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>SO Acknowledgement Delivery Schedule</label>
    <nameField>
        <label>SO Acknowledgement Delivery Schedule Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SO Acknowledgement Delivery Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>